crates/analyzer/tests/snapshots/errors__revert_reason_not_struct.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: `revert` error must be a struct
  ┌─ [snippet]:3:10
  │
3 │   revert 1
  │          ^ this has type `u256`; expected a struct


